Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-254

Connectable lock incorrect

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 0.3.0
    • None

    Description

      On class Connectable line 68 you define a lock required if it is running in function isSupportedRelationship(). If the Connectable is running then relationship_ does not change in the code. The relationship_ only can be changed when the state is not running. Is this backwards?

      Attachments

        Issue Links

          Activity

            People

              phrocker Marc Parisi
              fstakem Fredrick Stakem
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: