MINIFICPP-254: Resolve odd naming of isRunning variable so that it's clear we do not lock when we are running

Originally identified by Fredrick Stakem.